--- a/src/assistant_director/public/index.html
+++ b/src/assistant_director/public/index.html
@@ -20,7 +20,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Assistant Director Project</title>
+    <script src="https://cdn.auth0.com/js/auth0/8.8/auth0.min.js"></script>
+
 </head>
 
 <body>
